# idlie-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
accounts/: urls.py
accounts/auth/: login_auth.py
accounts/serializers/: login_serializer.py  profile_serializer.py
accounts/views/: avatar_upload_url_view.py  complete_profile_view.py  login_view.py  profle_view.py
authentication/: models.py  urls.py
authentication/jwt/: authentications.py  jwt_utils.py
authentication/migrations/: 0001_initial.py  0002_alter_devotp_otp_alter_devotp_phonenumber_and_more.py
authentication/service/: OTPservices.py  ownership.py  user_session.py
authentication/utils/: api_response.py
authentication/views/: get_otp_view.py  refresh_tokens.py  validate_otp.py
config/: settings.py  urls.py
core/: urls.py
core/utils/: api_response.py
core/views/: hello_world.py
feed/: tests.py  urls.py
feed/serializer/: explore_serializer.py  feed_serializer.py
feed/services/: explore_services.py  feed_services.py  fetch_media.py
feed/views/: explore_view.py  feed_view.py
foodspot/: admin.py  apps.py  models.py
foodspot/migrations/: 0001_initial.py  0002_initial.py
post/: admin.py  models.py  urls.py
post/migrations/: 0001_initial.py  0002_initial.py  0002_post_foodspot_tag_post_is_proccessed.py  0003_alter_post_media_url_alter_post_thumbnail_url.py  0003_comments_content_post_comment_count.py  0003_remove_post_media_url_remove_post_thumbnail_url.py  (+1 more)
user/: admin.py  models.py  urls.py
(+25 files in other folders)
