[project]
name = "idlie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.4",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-gis>=1.2.1",
    "faker>=40.15.0",
    "geopy>=2.4.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.9.0",
]
